# getafix

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  Publish.yml
ZF24_EN/Documentation/: 2_EN16931 code lists values v16 - used from 2025-11-15 - Fx 1.08.xlsx
ZF24_EN/Examples/: Readme.txt
ZF24_EN/Examples/0. MINIMUM/MINIMUM_Buchungshilfe/: MINIMUM_Buchungshilfe_analyzed-content.html
ZF24_EN/Examples/0. MINIMUM/MINIMUM_Rechnung/: MINIMUM_Rechnung_analyzed-content.html
ZF24_EN/Examples/1. BASIC WL/BASIC-WL_Buchungshilfe/: BASIC-WL_Buchungshilfe_analyzed-content.html
ZF24_EN/Examples/1. BASIC WL/BASIC-WL_Einfach/: BASIC-WL_Einfach_analyzed-content.html
ZF24_EN/Examples/2. BASIC/BASIC_Einfach/: BASIC_Einfach.xml  BASIC_Einfach_analyzed-content.html
ZF24_EN/Examples/2. BASIC/BASIC_Rechnungskorrektur/: BASIC_Rechnungskorrektur_analyzed-content.html
ZF24_EN/Examples/2. BASIC/BASIC_Taxifahrt/: BASIC_Taxifahrt.xml  BASIC_Taxifahrt_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_1_Teilrechnung/: EN16931_1_Teilrechnung.xml  EN16931_1_Teilrechnung_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_2_Teilrechnung/: EN16931_2_Teilrechnung.xml  EN16931_2_Teilrechnung_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_AbweichenderZahlungsempfaenger/: EN16931_AbweichenderZahlungsempf.xml  EN16931_AbweichenderZahlungsempf_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Betriebskostenabrechnung/: EN16931_Betriebskostenabrechnung_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Einfach/: EN16931_Einfach.xml  EN16931_Einfach_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Einfach_DueDate/: EN16931_Einfach_DueDate.xml  EN16931_Einfach_DueDate_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Einfach_negativePaymentDue/: EN16931_Einfach_negativePaymentDue.xml  EN16931_Einfach_negativePaymentDue_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Elektron/: EN16931_Elektron_Anlage_XML_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Gutschrift/: EN16931_Gutschrift.xml  EN16931_Gutschrift_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Haftpflichtversicherung_Versicherungssteuer/: EN16931_Haftpflichtversicherung_Versicherungssteuer.xml  EN16931_Haftpflichtversicherung_Versicherungssteuer_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Innergemeinschaftliche_Lieferungen/: EN16931_Innergemeinschaftliche_Lieferungen.xml  EN16931_Innergemeinschaftliche_Lieferungen_analyzed-content.html
ZF24_EN/Examples/3. EN16931/EN16931_Kleinunternehmer_ohne_USt_ID/: EN16931_Kleinunternehmer_ohneUStId.xml  EN16931_Kleinunternehmer_ohneUStId_analyzed-content.html
ZF24_EN/Schema/0_Factur-X_1.08_MINIMUM/: FACTUR-X_MINIMUM.sch
ZF24_EN/Schema/1_Factur-X_1.08_BASICWL/: FACTUR-X_BASIC-WL.sch
ZF24_EN/Schema/2_Factur-X_1.08_BASIC/: FACTUR-X_BASIC.sch
ZF24_EN/Schema/3_Factur-X_1.08_EN16931/: FACTUR-X_EN16931.sch
ZF24_EN/Schema/4_Factur-X_1.08_EXTENDED/: FACTUR-X_EXTENDED.sch
docs/: IMPLEMENTATION_PLAN.md  READING_OFFICIAL_DOCS.md  REVIEW_GUIDE.md  STRUCTURES.md  VALIDATION.md  VALIDATOR_REFACTOR.md
docs/PROFILES/: COMFORT.md  EXTENDED.md
docs/plans/: report-package.md
docs/spec/: SOURCES.md
src/carthorse/: cli.py  pdf.py  report.py
src/carthorse/rules/: __init__.py  _types.py  accounting.py  extended.py  line.py  party.py  settlement.py  trade.py
src/carthorse/schema/: __init__.py  accounting.py  agreement.py  delivery.py  document.py  element.py  fields.py  line.py  party.py  references.py  settlement.py  trade.py  types.py
src/getafix/: build.py  cli.py  errors.py  pdf.py  report.py
src/getafix/report/: __init__.py  _types.py  accounting.py  agreement.py  delivery.py  document.py  element.py  line.py  party.py  references.py  settlement.py  trade.py  types.py
src/getafix/rules/: __init__.py  _types.py  accounting.py  extended.py  line.py  party.py  settlement.py  trade.py
src/getafix/schema/: __init__.py  _numeric.py  accounting.py  agreement.py  delivery.py  document.py  element.py  line.py  party.py  references.py  settlement.py  trade.py  types.py
tests/: _fixtures.py  _parsers.py  _schematron.py  conftest.py  strategies.py  test_allowance_charge.py  test_allowance_charge_gating.py  test_arithmetic.py  test_attachments.py  test_br_48_61_62_63.py  test_br_51.py  test_br_cl_enums.py  test_br_dec.py  test_build.py  test_cli.py  test_coerce_enum.py  test_currency.py  test_document.py  test_extended_rules.py  test_extended_structures.py  test_hypothesis.py  test_line_references.py  test_numeric.py  test_payment.py  test_payment_means_detail.py  test_pdf.py  test_period.py  test_post_init_types.py  test_product_groups.py  test_report.py  test_roundtrip_fidelity.py  test_samples.py  test_schematron_roundtrip.py  test_seller.py  test_types.py  test_vat_categories.py  test_vat_category_exemption.py  test_vat_category_rates.py  test_vat_intra_community.py  test_vat_not_subject.py  (+4 more)
tests/samples/: BASICWL_zf24_Buchungshilfe.xml  BASICWL_zf24_Einfach.xml  BASIC_zf24_Rechnungskorrektur.xml  EN16931_zf24_Betriebskosten.xml  EN16931_zf24_Elektron.xml  EN16931_zf24_OEPNV.xml  EN16931_zf24_Physiotherapeut.xml  EN16931_zf24_Sachversicherung.xml  EXTENDED_synth_agent_parties.xml  EXTENDED_synth_product_line.xml  EXTENDED_synth_settlement_parties.xml  EXTENDED_zf24_Bau_Schlussrechnung.xml  EXTENDED_zf24_Fremdwaehrung.xml  EXTENDED_zf24_Kleinunternehmer.xml  EXTENDED_zf24_Kostenrechnung.xml  EXTENDED_zf24_Rechnungskorrektur.xml  MINIMUM_zf24_Buchungshilfe.xml  MINIMUM_zf24_Rechnung.xml  SOURCES.md
tests/schemas/: SOURCES.md
tests/schemas/4_Factur-X_1.08_EXTENDED/: FACTUR-X_EXTENDED_urn_un_unece_uncefact_data_standard_ReusableAggregateBusinessInformationEntity_100.xsd
tools/: build_synth_samples.py  check_bt_br_ids.py  check_schema_docs.py  check_verbatim.py  extract_business_rules.py  extract_business_terms.py  extract_codelists.py  extract_specs.py  ingest_en16931_terms.py  render_report.py  specs.json
(+62 files in other folders)
