[project]
name = "carthorse"
version = "0.1.0"
description = "Parse and create ZUGFerD files."
readme = "README.md"
authors = [
    { name = "Tammo Ippen", email = "tammo.ippen@posteo.de" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
    "tagic>=1.4.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "ruff>=0.14.5",
]

[tool.ruff.lint]
select = [
    # "A",
    "B",
    "BLE",
    # "C4",
    "DTZ",
    "E",
    "F",
    "FA",
    # "FBT",
    "I",
    "PT",
    "RSE",
    "RUF",
    "S",
    "T20",
    "TRY",
    "UP",
    "W605",
]
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "PT011",
    "PT013",
    "S101",
    "S110",
    "S112",
    "TRY003",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["DTZ", "S105"]

[tool.ruff.lint.isort]
known-first-party = ["carthorse"]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
# Use strict mode as the baseline
typeCheckingMode = "all"

# Python version and platform
pythonVersion = "3.12"
pythonPlatform = "All"

# Include/exclude patterns
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/.git",
    "**/.pytest_cache",
]

# Strict type checking rules (all enabled in "all" mode, but explicit for clarity)
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true

# Report all issues as errors (strictest setting)
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportMissingTypeArgument = "error"
reportMissingParameterType = "error"
# reportMissingReturnType = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# General type checking
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportIncompleteStub = "error"
reportInvalidStubStatement = "error"
reportMatchNotExhaustive = "error"
# reportShadowedImports = "error"
reportTypeCommentUsage = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUnusedCoroutine = "error"
reportUnusedExpression = "error"

# Implicit/any issues
reportImplicitStringConcatenation = "error"
reportImplicitOverride = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCallResult = "error"

# Optional strictness - can be relaxed if too strict
reportPrivateUsage = "error"
reportPrivateImportUsage = "error"
reportUninitializedInstanceVariable = "error"
reportInvalidTypeForm = "error"
reportAny = "information" 

# Additional strict settings
enableTypeIgnoreComments = false  # Disallow type: ignore comments
disableBytesTypePromotions = true  # Strict bytes vs str checking

# Diagnostic settings
enableExperimentalFeatures = false
