[project]
name = "carthorse"
version = "0.1.0"
description = "Parse and create ZUGFerD files."
readme = "README.md"
authors = [
    { name = "Tammo Ippen", email = "tammo.ippen@posteo.de" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
    "tagic>=1.4.0",
]

[project.optional-dependencies]
lxml = ["lxml>=6.0.2"]
cli = ["lxml>=6.0.2", "rich>=13.0"]
pdf = ["pypdf>=6.11.0"]

[project.scripts]
carthorse = "carthorse.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "elementpath>=5.1.1",
    "hypothesis>=6.152.4",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "openpyxl>=3.1.5",
    "pypdf>=6.11.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "rich>=13.0",
    "ruff>=0.14.5",
]

[tool.ruff.lint]
select = [
    # "A",
    "B",
    "BLE",
    # "C4",
    # "DTZ",
    "E",
    "F",
    "FA",
    # "FBT",
    "I",
    "PT",
    "RSE",
    "RUF",
    "S",
    "T20",
    "TRY",
    "UP",
    "W605",
]
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "PT011",
    "PT013",
    "S101",
    "S110",
    "S112",
    "TRY003",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["DTZ", "S105", "S314"]

[tool.ruff.lint.isort]
known-first-party = ["carthorse"]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.basedpyright]
# Use strict mode as the baseline
typeCheckingMode = "recommended"

# Python version and platform
pythonVersion = "3.12"
pythonPlatform = "All"

# Include/exclude patterns
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/.git",
    "**/.pytest_cache",
]

 failOnWarnings = false
